feat: add time display

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       <button class="slide-prev slider-icon"></button>
       <button class="slide-next slider-icon"></button>
     </div>
-    <time class="time"></time>
-    <date class="date"></date>
+    <time class="time">Time</time>
+    <date class="date">Date</date>
     <div class="greeting-container">
       <span class="greeting"></span>
       <input type="text" class="name" />
@@ -49,6 +49,7 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <script src="js/timeAndDate.js"></script>
+  <script src="js/langs.js"></script>
 </body>
 </html>
