--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <date class="date">Date</date>
     <div class="greeting-container">
       <span class="greeting"></span>
-      <input type="text" class="name" />
+      <input type="text" class="name" value="" placeholder=""/>
     </div>
   </main>
   <footer class="footer">
@@ -49,7 +49,8 @@
       <div class="author"></div>
     </div>
   </footer>
-  <script src="js/timeAndDate.js"></script>
   <script src="js/langs.js"></script>
+  <script src="js/greeting.js"></script>
+  <script src="js/timeAndDate.js"></script>
 </body>
 </html>
