--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <title>momentum</title>
 </head>
-<body>
+<body class="body">
   <header class="header">
     <div class="player">
       <div class="player-controls">
@@ -52,5 +52,6 @@
   <script src="js/langs.js"></script>
   <script src="js/greeting.js"></script>
   <script src="js/timeAndDate.js"></script>
+  <script src="js/slider.js"></script>
 </body>
 </html>
