feat: add quote display

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </main>
   <footer class="footer">
     <button class="change-quote"></button>
-    <div>
+    <div class="quote-container">
       <div class="quote"></div>
       <div class="author"></div>
     </div>
@@ -74,5 +74,6 @@
   <script src="js/timeAndDate.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/weather.js"></script>
+  <script src="js/quotes.js"></script>
 </body>
 </html>
