feat: add styles for playlist

--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
         <button class="play player-icon"></button>
         <button class="play-next player-icon"></button>
       </div>
-      <ul class="play-list"></ul>
+      <ul class="play-list">
+        <li class="play-list__item">Example</li>
+        <li class="play-list__item">Example</li>
+        <li class="play-list__item">Example</li>
+        <li class="play-list__item">Example</li>
+        <li class="play-list__item">Example</li>
+        
+      </ul>
     </div>
     <div class="weather">
       <input type="text" class="city" value=""/>
