feat: add basic audio player

--- a/index.html
+++ b/index.html
@@ -16,14 +16,7 @@
         <button class="play player-icon"></button>
         <button class="play-next player-icon"></button>
       </div>
-      <ul class="play-list">
-        <li class="play-list__item">Example</li>
-        <li class="play-list__item">Example</li>
-        <li class="play-list__item">Example</li>
-        <li class="play-list__item">Example</li>
-        <li class="play-list__item">Example</li>
-        
-      </ul>
+      <ul class="play-list"></ul>
     </div>
     <div class="weather">
       <input type="text" class="city" value=""/>
@@ -82,5 +75,7 @@
   <script src="js/slider.js"></script>
   <script src="js/weather.js"></script>
   <script src="js/quotes.js"></script>
+  <script type="module" src="js/playList.js"></script>
+  <script type="module" src="js/player.js"></script>
 </body>
 </html>
