--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,6 +9,7 @@
   <link rel="stylesheet" href="css/style.css" />
   <title>momentum</title>
 </head>
+
 <body class="body">
   <header class="header">
     <div class="player">
@@ -16,11 +18,22 @@
         <button class="play player-icon"></button>
         <button class="play-next player-icon"></button>
       </div>
+      <div class="volume-controls">
+        <button class="unmute player-icon"></button>
+        <input class="volume-slider" type="range" min="0" max="1" step="0.01">
+      </div>
+      <div class="song-title"></div>
+      <div class="progress">
+        <div class="progress-bar"></div>
+      </div>
+      <div class="time-container">
+        <div class="current-time">00:00</div><div class="duration-time"></div>
+      </div>
       <ul class="play-list"></ul>
     </div>
     <div class="weather">
-      <input type="text" class="city" value=""/>
-      <div class="weather-indicators" >
+      <input type="text" class="city" value="" />
+      <div class="weather-indicators">
         <i class="weather-icon owf"></i>
         <span class="temperature"></span>
       </div>
@@ -42,7 +55,7 @@
     <date class="date">Date</date>
     <div class="greeting-container">
       <span class="greeting"></span>
-      <input type="text" class="name" value="" placeholder=""/>
+      <input type="text" class="name" value="" placeholder="" />
     </div>
   </main>
   <footer class="footer">
@@ -58,7 +71,9 @@
       <li class="footer__item">
         <a href="https://github.com/gl-el">
           <svg width="51" height="51" viewBox="0 0 51 51" fill="none" xmlns="http://www.w3.org/2000/svg">
-            <path fill-rule="evenodd" clip-rule="evenodd" d="M25.4057 11.7367C17.486 11.7367 11.0715 18.1258 11.0715 26.0139C11.0715 32.3316 15.1747 37.6677 20.8725 39.5595C21.5892 39.6844 21.858 39.2561 21.858 38.8813C21.858 38.5422 21.8401 37.4179 21.8401 36.2222C18.2386 36.8825 17.3069 35.3477 17.0202 34.5446C16.8589 34.1341 16.1601 32.867 15.5509 32.5279C15.0492 32.2602 14.3325 31.5999 15.533 31.5821C16.6618 31.5642 17.4681 32.6172 17.7369 33.0455C19.027 35.2049 21.0875 34.5981 21.9117 34.2233C22.0372 33.2953 22.4134 32.6707 22.8256 32.3138C19.6362 31.9568 16.3035 30.7254 16.3035 25.2644C16.3035 23.7117 16.8589 22.4268 17.7727 21.4274C17.6294 21.0704 17.1277 19.607 17.9161 17.6439C17.9161 17.6439 19.1166 17.2691 21.858 19.1073C23.0047 18.7861 24.2231 18.6255 25.4416 18.6255C26.66 18.6255 27.8784 18.7861 29.0251 19.1073C31.7665 17.2513 32.967 17.6439 32.967 17.6439C33.7554 19.607 33.2537 21.0704 33.1104 21.4274C34.0242 22.4268 34.5796 23.6939 34.5796 25.2644C34.5796 30.7433 31.229 31.9568 28.0396 32.3138C28.5593 32.7599 29.0072 33.6166 29.0072 34.9551C29.0072 36.8646 28.9893 38.3994 28.9893 38.8813C28.9893 39.2561 29.2581 39.7022 29.9748 39.5595C35.6368 37.6677 39.74 32.3138 39.74 26.0139C39.74 18.1258 33.3254 11.7367 25.4057 11.7367Z" fill="white"/>
+            <path fill-rule="evenodd" clip-rule="evenodd"
+              d="M25.4057 11.7367C17.486 11.7367 11.0715 18.1258 11.0715 26.0139C11.0715 32.3316 15.1747 37.6677 20.8725 39.5595C21.5892 39.6844 21.858 39.2561 21.858 38.8813C21.858 38.5422 21.8401 37.4179 21.8401 36.2222C18.2386 36.8825 17.3069 35.3477 17.0202 34.5446C16.8589 34.1341 16.1601 32.867 15.5509 32.5279C15.0492 32.2602 14.3325 31.5999 15.533 31.5821C16.6618 31.5642 17.4681 32.6172 17.7369 33.0455C19.027 35.2049 21.0875 34.5981 21.9117 34.2233C22.0372 33.2953 22.4134 32.6707 22.8256 32.3138C19.6362 31.9568 16.3035 30.7254 16.3035 25.2644C16.3035 23.7117 16.8589 22.4268 17.7727 21.4274C17.6294 21.0704 17.1277 19.607 17.9161 17.6439C17.9161 17.6439 19.1166 17.2691 21.858 19.1073C23.0047 18.7861 24.2231 18.6255 25.4416 18.6255C26.66 18.6255 27.8784 18.7861 29.0251 19.1073C31.7665 17.2513 32.967 17.6439 32.967 17.6439C33.7554 19.607 33.2537 21.0704 33.1104 21.4274C34.0242 22.4268 34.5796 23.6939 34.5796 25.2644C34.5796 30.7433 31.229 31.9568 28.0396 32.3138C28.5593 32.7599 29.0072 33.6166 29.0072 34.9551C29.0072 36.8646 28.9893 38.3994 28.9893 38.8813C28.9893 39.2561 29.2581 39.7022 29.9748 39.5595C35.6368 37.6677 39.74 32.3138 39.74 26.0139C39.74 18.1258 33.3254 11.7367 25.4057 11.7367Z"
+              fill="white" />
           </svg>
         </a>
       </li>
@@ -78,4 +93,5 @@
   <script type="module" src="js/playList.js"></script>
   <script type="module" src="js/player.js"></script>
 </body>
+
 </html>
