feat: added unsplash and flickr api for background photos

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
       <input class="language-slider" type="range" min="0" max="1" step="1" value="0">
       <span class="ru">Ru</span>
     </div>
+    <div class="src-selection">
+    <select class="image-src">
+      <option value="0">GitHub</option>
+      <option value="1">Unsplash</option>
+      <option value="2">Flickr</option>
+    </select>
+    <input class="image-tag" type="text" placeholder="tag">
+    </div>
     <div class="weather">
       <input type="text" class="city" value="" />
       <div class="weather-indicators">
@@ -98,6 +106,8 @@
   <script type="module" src="js/playList.js"></script>
   <script type="module" src="js/player.js"></script>
   <script src="js/translation.js"></script>
+  <script src="js/unsplash.js"></script>
+  <script src="js/flickr.js"></script>
 </body>
 
 </html>
