--- a/index.html
+++ b/index.html
@@ -31,18 +31,19 @@
       </div>
       <ul class="play-list"></ul>
     </div>
-    <div class="language-setting">
-      <span class="en">En</span>
-      <input class="language-slider" type="range" min="0" max="1" step="1" value="0">
-      <span class="ru">Ru</span>
-    </div>
+    <label class="switch langs">
+      <input type="checkbox" class="switch__input lang__checkbox">
+      <span class="switch__slider"></span>
+      <span class="langs__labels" data-en="En" data-ru="Ru"></span>
+    </label>
+    </label>
     <div class="src-selection">
     <select class="image-src">
       <option value="0">GitHub</option>
       <option value="1">Unsplash</option>
       <option value="2">Flickr</option>
     </select>
-    <input class="image-tag" type="text" placeholder="tag">
+    <input class="image-tag inactive" type="text" placeholder="tag">
     </div>
     <div class="weather">
       <input type="text" class="city" value="" />
@@ -108,6 +109,7 @@
   <script src="js/translation.js"></script>
   <script src="js/unsplash.js"></script>
   <script src="js/flickr.js"></script>
+  <script src="settings.js"></script>
 </body>
 
 </html>
