--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
       </div>
       <ul class="play-list"></ul>
     </div>
+    <div class="to-do">
+    <div class="to-do__container top_inactive">
+      <p class="to-do__title">To do:</p>
+      <ul class="to-do__list">
 
+      </ul>
+      <form class="to-do__form">
+        <input class="to-do__input" type="text" placeholder="Enter new task">
+      </form>
+    
+    </div>
+    <button class="to-do-btn top_inactive"></button>
+    </div>
     <div class="weather">
       <input type="text" class="city" value="" />
       <div class="weather-indicators">
@@ -167,6 +179,7 @@
   <script src="js/translation.js"></script>
   <script src="js/unsplash.js"></script>
   <script src="js/flickr.js"></script>
+  <script src="js/todo.js"></script>
   <script src="js/settings.js"></script>
 </body>
 
