--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
       <ul class="play-list"></ul>
     </div>
     <div class="to-do">
-    <div class="to-do__container top_inactive">
-      <p class="to-do__title">To do:</p>
-      <ul class="to-do__list">
+      <div class="to-do__container top_inactive">
+        <p class="to-do__title">To do:</p>
+        <ul class="to-do__list">
 
-      </ul>
-      <form class="to-do__form">
-        <input class="to-do__input" type="text" placeholder="Enter new task">
-      </form>
-    
-    </div>
-    <button class="to-do-btn top_inactive"></button>
+        </ul>
+        <form class="to-do__form">
+          <input class="to-do__input" type="text" placeholder="Enter new task">
+        </form>
+
+      </div>
+      <button class="to-do-btn top_inactive"></button>
     </div>
     <div class="weather">
       <input type="text" class="city" value="" />
@@ -141,6 +141,14 @@
           <div class="settings-item__description settings__quote">Quote</div>
           <label class="switch">
             <input type="checkbox" class="switch__input quote__checkbox">
+            <span class="switch__slider"></span>
+            <span class="options__labels" data-on="On" data-off="Off"></span>
+          </label>
+        <li>
+        <li class="settings-item">
+          <div class="settings-item__description settings__todo">To do</div>
+          <label class="switch">
+            <input type="checkbox" class="switch__input todo__checkbox">
             <span class="switch__slider"></span>
             <span class="options__labels" data-on="On" data-off="Off"></span>
           </label>
